// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContextualAlert > should render : 'comment' > expected html 1`] = `
<div>
  <div
    class="relative pl-4 sm:pl-6 bg-sky-50 cmnt-test-css"
  >
    <div
      class="absolute top-3 left-1.5 pt-1 sm:left-3.5 bg-sky-50"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-comment-dots h-6 w-6 text-sky-800"
        data-icon="comment-dots"
        data-prefix="far"
        data-testid="comment"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M168.2 384.9c-15-5.4-31.7-3.1-44.6 6.4c-8.2 6-22.3 14.8-39.4 22.7c5.6-14.7 9.9-31.3 11.3-49.4c1-12.9-3.3-25.7-11.8-35.5C60.4 302.8 48 272 48 240c0-79.5 83.3-160 208-160s208 80.5 208 160s-83.3 160-208 160c-31.6 0-61.3-5.5-87.8-15.1zM26.3 423.8c-1.6 2.7-3.3 5.4-5.1 8.1l-.3 .5c-1.6 2.3-3.2 4.6-4.8 6.9c-3.5 4.7-7.3 9.3-11.3 13.5c-4.6 4.6-5.9 11.4-3.4 17.4c2.5 6 8.3 9.9 14.8 9.9c5.1 0 10.2-.3 15.3-.8l.7-.1c4.4-.5 8.8-1.1 13.2-1.9c.8-.1 1.6-.3 2.4-.5c17.8-3.5 34.9-9.5 50.1-16.1c22.9-10 42.4-21.9 54.3-30.6c31.8 11.5 67 17.9 104.1 17.9c141.4 0 256-93.1 256-208S397.4 32 256 32S0 125.1 0 240c0 45.1 17.7 86.8 47.7 120.9c-1.9 24.5-11.4 46.3-21.4 62.9zM144 272a32 32 0 1 0 0-64 32 32 0 1 0 0 64zm144-32a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zm80 32a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="overflow-auto border-l-4 pt-4 pb-2.5 pl-6 border-l-sky-800"
    >
      <div>
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`ContextualAlert > should render : 'danger' > expected html 1`] = `
<div>
  <div
    class="relative pl-4 sm:pl-6 bg-white dang-test-css"
  >
    <div
      class="absolute top-3 left-1.5 pt-1 sm:left-3.5 bg-white"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-circle-exclamation h-6 w-6 text-red-700"
        data-icon="circle-exclamation"
        data-prefix="fas"
        data-testid="danger"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24l0 112c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-112c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="overflow-auto border-l-4 pt-4 pb-2.5 pl-6 border-l-red-700"
    >
      <div>
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`ContextualAlert > should render : 'foo' > expected html 1`] = `
<div>
  <div
    class="relative pl-4 sm:pl-6 bg-white foo-test-css"
  >
    <div
      class="absolute top-3 left-1.5 pt-1 sm:left-3.5 bg-white"
    />
    <div
      class="overflow-auto border-l-4 pt-4 pb-2.5 pl-6 border-l-gray-700"
    >
      <div>
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`ContextualAlert > should render : 'info' > expected html 1`] = `
<div>
  <div
    class="relative pl-4 sm:pl-6 bg-white info-test-css"
  >
    <div
      class="absolute top-3 left-1.5 pt-1 sm:left-3.5 bg-white"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-circle-info h-6 w-6 text-cyan-700"
        data-icon="circle-info"
        data-prefix="fas"
        data-testid="info"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="overflow-auto border-l-4 pt-4 pb-2.5 pl-6 border-l-cyan-700"
    >
      <div>
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`ContextualAlert > should render : 'success' > expected html 1`] = `
<div>
  <div
    class="relative pl-4 sm:pl-6 bg-white succ-test-css"
  >
    <div
      class="absolute top-3 left-1.5 pt-1 sm:left-3.5 bg-white"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-circle-check h-6 w-6 text-green-700"
        data-icon="circle-check"
        data-prefix="fas"
        data-testid="success"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="overflow-auto border-l-4 pt-4 pb-2.5 pl-6 border-l-green-700"
    >
      <div>
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`ContextualAlert > should render : 'warning' > expected html 1`] = `
<div>
  <div
    class="relative pl-4 sm:pl-6 bg-white warn-test-css"
  >
    <div
      class="absolute top-3 left-1.5 pt-1 sm:left-3.5 bg-white"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-triangle-exclamation h-6 w-6 text-amber-700"
        data-icon="triangle-exclamation"
        data-prefix="fas"
        data-testid="warning"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480L40 480c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24l0 112c0 13.3 10.7 24 24 24s24-10.7 24-24l0-112c0-13.3-10.7-24-24-24zm32 224a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="overflow-auto border-l-4 pt-4 pb-2.5 pl-6 border-l-amber-700"
    >
      <div>
        test
      </div>
    </div>
  </div>
</div>
`;
